cmake_minimum_required(VERSION 3.20.0)

project(ModernMakeForCpp)

set(CMAKE_VERBOSE_MAKEFILE ON)
set(DOWNLOAD_EXTRACT_TIMESTAMP TRUE)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED YES)
set(CMAKE_CXX_EXTENSIONS NO)

if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4 /await")
endif()

if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unused-variable -Wno-unused-but-set-variable")
endif()

if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unused-parameter -Wno-unused-variable -Wno-unused-private-field")
endif()

add_subdirectory("chapter01/01-hello")
# add_subdirectory("chapter01/02-presets")
# add_subdirectory("chapter01/03-script")
add_subdirectory("chapter01/04-module")
# add_subdirectory("chapter02/01-arguments")
# add_subdirectory("chapter02/02-variables")
add_subdirectory("chapter02/03-environment")
add_subdirectory("chapter02/04-scope")
# add_subdirectory("chapter02/06-conditional")
# add_subdirectory("chapter02/07-loops")
# add_subdirectory("chapter02/08-definitions")
add_subdirectory("chapter02/09-procedural")
# add_subdirectory("chapter02/10-useful")
add_subdirectory("chapter03/01-partition")
# add_subdirectory("chapter03/02-include")
# add_subdirectory("chapter03/03-add_subdirectory")
# add_subdirectory("chapter03/04-subprojects")
add_subdirectory("chapter03/05-structure")
add_subdirectory("chapter03/06-toolchain")
add_subdirectory("chapter03/07-features")
# add_subdirectory("chapter03/08-test_run")
add_subdirectory("chapter03/09-in-source")
add_subdirectory("chapter04/01-targets")
add_subdirectory("chapter04/02-propagated")
add_subdirectory("chapter04/03-command")
# add_subdirectory("chapter04/04-command")
add_subdirectory("chapter04/05-genex")
# add_subdirectory("chapter05/01-sources")
add_subdirectory("chapter05/02-definitions")
add_subdirectory("chapter05/03-git")
add_subdirectory("chapter05/04-configure")
add_subdirectory("chapter05/05-optimize")
add_subdirectory("chapter05/06-precompile")
add_subdirectory("chapter05/07-debug")
add_subdirectory("chapter06/01-libraries")
add_subdirectory("chapter06/02-odr-fail")
# add_subdirectory("chapter06/03-odr-success")
# add_subdirectory("chapter06/04-odr-success")
add_subdirectory("chapter06/05-dynamic")
# add_subdirectory("chapter06/06-unresolved")
# add_subdirectory("chapter06/07-testing")
# add_subdirectory("chapter07/01-find-package-variables")
# add_subdirectory("chapter07/02-find-package-targets")
# add_subdirectory("chapter07/03-find-pkg-config")
# add_subdirectory("chapter07/04-find-package-custom")
# add_subdirectory("chapter07/05-git-submodule-manual")
# add_subdirectory("chapter07/06-git-submodule-auto")
# add_subdirectory("chapter07/07-git-clone")
# add_subdirectory("chapter07/08-external-project-git")
# add_subdirectory("chapter07/09-fetch-content")
# add_subdirectory("chapter08/01-no-framework")
# add_subdirectory("chapter08/02-structured")
# add_subdirectory("chapter08/03-catch2")
# add_subdirectory("chapter08/04-gtest")
# # add_subdirectory("chapter08/05-gmock")
# add_subdirectory("chapter08/06-coverage")
# add_subdirectory("chapter09/01-formatting")
# add_subdirectory("chapter09/02-clang-tidy")
# add_subdirectory("chapter09/03-valgrind")
# add_subdirectory("chapter09/04-memcheck")
# add_subdirectory("chapter10/01-doxygen")
# add_subdirectory("chapter10/02-doxygen-nice")
# add_subdirectory("chapter11/01-export")
# add_subdirectory("chapter11/02-install-targets")
# add_subdirectory("chapter11/03-install-files")
# add_subdirectory("chapter11/04-install-directories")
# add_subdirectory("chapter11/05-install-code")
# add_subdirectory("chapter11/06-install-export")
# add_subdirectory("chapter11/07-config-file")
# add_subdirectory("chapter11/08-find_package")
# add_subdirectory("chapter11/09-advanced-config")
# add_subdirectory("chapter11/10-version-file")
# add_subdirectory("chapter11/11-components")
# add_subdirectory("chapter11/12-cpack")
# add_subdirectory("chapter12/01-full-project")
# add_subdirectory("chapter12/02-find_package")
